--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
     <title>ahsan-labs</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+
+    <!-- DEV: load source directly -->
+    <script type="module">
+      if (import.meta.env.DEV) {
+        import('/src/main.jsx');
+      }
+    </script>
+
+    <!-- PROD: Vite will inject the built JS automatically -->
+    <!-- No need to manually add /dist/assets/index-xxxx.js -->
   </body>
 </html>
