--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="ExCS7_mX8u0ewkE3DxM9fnehco_lcj2TDklmLjqQG74" />
     <link rel="icon" type="image/svg+xml" href="/logoimage.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANSpect Technologies</title>
